/*
Dear Programmers,

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*                                                 *
*	This file belongs to Kevin Veros Hamonangan   *
*	and	Fandi Fladimir Dachi and is a part of     *
*	our	last project as the student of Del        *
*	Institute of Technology, Sitoluama.           *
*	Please contact us via Instagram:              *
*	sleepingnext and fandi_dachi                  *
*	before copying this file.                     *
*	Thank you, buddy. ðŸ˜Š                          *
*                                                 *
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

syntax = "proto3";

package com.ta04.srv.product;

message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string picture = 5;
    string status = 6;
}

message GetAllProductsRequest {
    string query = 1;
    string status = 2;
}

message GetOneProductRequest {
    int32 id = 1;
}

message Response {
    Product product = 1;
    Error error = 2;
    repeated Product products = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}

service ProductService {
    rpc GetAllProducts (GetAllProductsRequest) returns (Response) {
    }

    rpc GetOneProduct (GetOneProductRequest) returns (Response) {
    }

    rpc CreateOneProduct (Product) returns (Response) {
    }

    rpc UpdateOneProduct (Product) returns (Response) {
    }
}